src/objects/FourPlanning_Hito__c.object
<CustomObject>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vencimiento Contrato Activo con Telefónica</fullName>
                </value>
                <value>
                    <fullName>Vencimiento Contrato Activo con la Competencia</fullName>
                </value>
                <value>
                    <fullName>Publicación RFP Comunicaciones</fullName>
                </value>
                <value>
                    <fullName>Publicación RFP TI</fullName>
                </value>
                <value>
                    <fullName>Evento para clientes de Telefonica</fullName>
                </value>
                <value>
                    <fullName>Evento Relevante de la industria</fullName>
                </value>
                <value>
                    <fullName>Previsión Cierre TOP 3 deals</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripción</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FourPlanning__c</fullName>
        <label>FourPlanning</label>
        <referenceTo>FourPlanning__c</referenceTo>
        <relationshipLabel>FourPlanning Hitos</relationshipLabel>
        <relationshipName>FourPlanning_Hitos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>FourPlanning Hito</label>
    <nameField>
        <label>Nombre de FourPlanning Hitos</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FourPlanning Hitos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>